--- a/Ingenio.PortalWebExterno/Views/Shared/Footer.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/Footer.cshtml
@@ -1,66 +1,99 @@
-﻿<style>
-  .img {
-  width: 220px;
-  height: 60px;
-  border: 10px solid #fff;
-  -webkit-border-radius: 15px;
-   border-radius: 15px;
-  overflow: hidden;
-}
-.img2 {
-  width: 220px;
-  height: 200px;
-  border: 10px solid #fff;
-  -webkit-border-radius: 15px;
-   border-radius: 15px;
-  overflow: hidden;
-}
+﻿<footer id="footer">
+    <!-- LOGO FOOTER-->
+    <div class="container-fluid container-footer-top">
+        <div class="container ">
+            <div class="row row-logo-footer">
+                <div class="col-12 col-md-5">
+                    <ul class="list-redes">
+                        <li class="item">
+                            <a href="https://www.facebook.com/Cofinal.com.co/" target="_blank" aria-label="Facebook Cofinal">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                        </li>
 
-</style>
-<style>
-    #footer {
-        margin-right:auto;
+                        <li class="item">
+                            <a href="https://instagram.com/cofinaloficial?utm_medium=copy_link" target="_blank" aria-label="Instagram Cofinal">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                            </a>
+                        </li>
 
-    }
-</style>
+                        <li class="item">
+                            <a href="https://twitter.com/Cofinal?t=6Jh0jDZ3eidsMYkgmvmJsg&s=09" target="_blank" aria-label="Twitter Cofinal">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                        </li>
 
-<footer id="footer" >
-    <div class="container">
-        <div class="col-sm-6 col-md-3">
-            <h4>Contáctenos</h4>
-            <p>
-                <strong> Cofinal.</strong>
-                <br><i class="fa fa-headphones"></i> (2) 7336300
-                <br><i class="fa fa-home"></i> Cra. 29 No. 18-41 San Juan de Pasto-Nariño-Colombia
-                <br> <i class="fa fa-link"></i> www.cofinal.com.co
-        </div>
-        <!-- /.col-md-3 -->
-
-        <div class="col-md-3 col-sm-6">
-            <h4>
-                <a href="http://www.supersolidaria.gov.co/">
-                    <img class="img" src="~/img/vigilado2.png" alt="Vigilado supersolidaria">
-
-                </a>
-            </h4>
-        </div>
-        <!-- /.col-md-3 -->
-        <div class="col-md-3 col-sm-6">
-            <h4>
-                <a href="http://www.fogacoop.gov.co/">
-                    <img class="img" src="~/img/fogacoop1.png" alt="FOGACOOP" >
-                </a>
-            </h4>
-        </div>
-        <!-- /.col-md-3 -->
-
-
-
-        <div class="col-md-3 col-sm-6">
-            <div class='embed-container  maps'>
-                <iframe class="img2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.9160578226433!2d-77.28225128580804!3d1.2185285623241011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e2ed487375d6129%3A0x75d762a9f2c9e3da!2sCOFINAL!5e0!3m2!1ses!2sit!4v1454678597238" height="250" frameborder="0" style="border: 0; width: 100%;" allowfullscreen></iframe>
+                        <li class="item">
+                            <a href="https://youtube.com/channel/UC8I7nZ77BH5qK3rXvQZre2w" target="_blank" aria-label="Youtube Cofinal">
+                                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        
+                    </ul>
+                </div>
+                <div class="col-12 col-md-7">
+                    <img src="~/img/logo_cofinal_white.png" class="image-cofinal-white" />
+                </div>
             </div>
         </div>
     </div>
 
+    <!-- CONTENTT FOOTER-->
+    <div class="container-fluid container-content-footer">
+        
+        <div class="row row-content-footer">
+            
+            <div class="col-12 col-md-6 col-contact-footer">
+                <ul class="list-contact-footer">
+                    <li class="item">
+                        <a href="https://goo.gl/maps/oBvN8UYHhERFkgH99" target="_blank" aria-controls="phone">
+                            <img src="~/img/logo_footer_1.png" class="image-contact" />
+                        </a>
+                        <div class="content">
+                            <strong>DIRECCCIÓN</strong> <br />
+                            Cra. 29 No. 18-41 San juan de Pasto <br />
+                            Nariño - Colombia
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a href="tel:6027336300" target="_blank" aria-controls="phone">
+                            <img src="~/img/logo_footer_2.png" class="image-contact" />
+                        </a>
+                        <div class="content">
+                            <strong>CENTRO DE LLAMADAS</strong> <br />
+                            Tel: (2) 7336300 <br />
+                            Extensión: 253
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a href="mailto:servicioalasociado@cofinal.com.co" target="_blank" aria-controls="phone">
+                            <img src="~/img/logo_footer_3.png" class="image-contact" />
+                        </a>
+                        <div class="content">
+                            <strong>CORREO ELECTRONICO</strong> <br />
+                            servicioalasociado@cofinal.com.co <br />
+                            www.cofinal.com.co
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-12 col-md-6 col-maps">
+                <div class='embed-container  maps'>
+                    <iframe class="img2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.9160578226433!2d-77.28225128580804!3d1.2185285623241011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e2ed487375d6129%3A0x75d762a9f2c9e3da!2sCOFINAL!5e0!3m2!1ses!2sit!4v1454678597238" frameborder="0" style="border: 0;" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- TERMS FOOTER -->
+    <div class="container-fluid container-footer-top" >
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <p class="terms-footer">Copyright 2022. COFINAL - Cooperativa de Ahorro y Crédito Nariñense -  Todos los derechos Reservados.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
