--- a/Ingenio.PortalWebExterno/Content/style.red.css
+++ b/Ingenio.PortalWebExterno/Content/style.red.css
@@ -242,10 +242,131 @@ ul.list-style-none {
     box-shadow: 0 0 5px #cccccc;
   }
 }
+/* Slider Video*/
+
+#actualiza {
+    padding: 10px 50px;
+    border-radius: 30px;
+    background-color: rgba(224,85,20,1);
+    color:white;
+    border:none;
+}
+
+#Video_Slider {
+    position: relative;
+}
+#sliderVideo {
+    /*position: fixed;*/
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 60vh;
+    /*min-height: 100%;*/
+    /*background-size: cover;*/
+    object-fit: cover;
+}
+
+.content-video {
+    position: absolute;
+    bottom: 0;
+    /*background: rgba(0, 0, 0, 0.5);*/
+    color: #C2841C;
+    width: 100%;
+    /*padding: 20px;*/
+    margin:0 0 20px 0;
+}
+.content-video > h3 {
+    color:#A47D42;
+    font-size:3em;
+    text-shadow: 1px 1px 2px black;
+
+}
+@media (max-width: 450px) {
+    #nuestrosServicios {
+        display:none;
+    }
+    #navbar{
+        padding:10px;
+    }
+    #top {
+        display: none;
+    }
+    #sliderVideo{
+        align-items:center;
+    }
+    .content-video > h3, .content-video > p {
+        display: none;
+    }
+    #actualiza {
+        margin: 0 auto;
+    }
+    .content-video {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    #sobreNosotros{
+        display:none;
+    }
+    .contenedor {
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+        justify-content:center;
+    }
+    .contenedor > h3 {
+        color: #E07414BF;
+        font-weight:700;
+        /*font-size:3rem;*/
+    }
+    .contenedor>button{
+        margin:10px 40px;
+        background-color: rgba(224,85,20,1);
+        color: white;
+        width:200px;
+        border-radius:30px;
+        padding:10px;
+        border:none;
+    }
+    #seccionImagen{
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items:center;
+    }
+    #seccionImagen > img{
+        width:50vh;
+    }
+    .icons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: #FB7601;
+        font-size: 3.5em;
+    }
+    .icons > .icentrado{
+        width:11.5rem;
+        height:11.5rem;
+        border:3px solid #FB7601;
+        border-radius: 50%;
+        padding:20px;
+        margin:30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    #nav2{}
+}
+
+
+
+/* Color del titulo*/
+
 #top {
-  background: #555555;
-  color: #eeeeee;
-  padding: 10px 0;
+    background-color: rgba(224,85,20,0.75);
+    color: #eeeeee;
+    padding: 10px 0;
 }
 #top p {
   margin: 0;
@@ -553,9 +674,10 @@ body.boxed .navbar-affixed-top.affix {
   border-radius: 0;
 }
 .btn-template-main {
-  color: #da4d4d;
-  background-color: #ffffff;
+  color: white;
+  background-color: #e05414 !important;
   border-color: #da4d4d;
+  border-radius:20% !important;
 }
 .btn-template-main:hover,
 .btn-template-main:focus,
@@ -687,9 +809,10 @@ fieldset[disabled] .btn-template-transparent-black.active {
   background-color: transparent;
   border-color: #ffffff;
 }
+.navbar-default
 .btn-template-transparent-black .badge {
-  color: transparent;
-  background-color: #ffffff;
+    color: transparent;
+    background-color: #ffffff;
 }
 .btn-template-transparent-black:hover,
 .btn-template-transparent-black:focus,
@@ -3083,7 +3206,8 @@ fieldset[disabled] .btn-template-primary.active {
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #555555;
-  background-color: #eca1a1;
+  /*background-color: #eca1a1;*/
+  background-color:rgba(224,85,20,0.75);
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
