--- a/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
@@ -58,9 +58,9 @@
                     <div class="container">
                         <div class="navbar-header">
                             <a class="navbar-brand home" href="~/Home/index">
-                                <img src="~/img/logo22.png" alt="Cofinal" class="hidden-xs hidden-sm hidden-md" style="margin-top: -0.4em ">
-                                <img src="~/img/logo23.png" alt="Cofinal" class="visible-sm visible-md" style="margin-top: -0.4em "><span class="sr-only">Cofinal</span>
-                                <img src="~/img/logo22.png" alt="Cofinal" class="visible-xs  img-responsive" style="margin-top: -0.4em "><span class="sr-only">Cofinal</span>
+                                <img src="~/img/LOGO_COFINAl.png" alt="Cofinal" class="hidden-xs hidden-sm hidden-md" style="margin-top: -0.4em;width:90%; ">
+                                <img src="~/img/LOGO_COFINAl.png" alt="Cofinal" class="visible-sm visible-md" style="margin-top: -0.4em "><span class="sr-only">Cofinal</span>
+                                <img src="~/img/LOGO_COFINAl.png" alt="Cofinal" class="visible-xs  img-responsive" style="margin-top: -0.4em;width:250px;"><span class="sr-only">Cofinal</span>
                             </a>
                             <div class="navbar-buttons">
                                 <button type="button" class="navbar-toggle btn-template-main" data-toggle="collapse" data-target="#navigation">
