--- a/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
@@ -59,7 +59,7 @@
                         <div class="navbar-header">
                             <a class="navbar-brand home" href="~/Home/index">
                                 <img src="~/img/LOGO_COFINAl.png" alt="Cofinal" class="hidden-xs hidden-sm hidden-md" style="margin-top: -0.4em;width:90%; ">
-                                <img src="~/img/LOGO_COFINAl.png" alt="Cofinal" class="visible-sm visible-md" style="margin-top: -0.4em "><span class="sr-only">Cofinal</span>
+                                <img src="~/img/LOGO_COFINAl.png" alt="Cofinal" class="visible-sm visible-md" style="margin-top: -0.4em;width:196px; "><span class="sr-only">Cofinal</span>
                                 <img src="~/img/LOGO_COFINAl.png" alt="Cofinal" class="visible-xs  img-responsive" style="margin-top: -0.4em;width:250px;"><span class="sr-only">Cofinal</span>
                             </a>
                             <div class="navbar-buttons">
@@ -99,7 +99,7 @@
                                     </ul>
                                 </li>
                                 <li id="productos" class="dropdown">
-                                    <a href="javascript: void(0)" class="dropdown-toggle" data-toggle="dropdown">Productos<b class="caret"></b></a>
+                                    <a href="javascript: void(0)" class="dropdown-toggle" data-toggle="dropdown">Portafolio<b class="caret"></b></a>
                                     <ul class="dropdown-menu">
                                         <li>
                                             <a href="~/Home/ahorros">AHORRO</a>
